--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 fastapi = "^0.111.1"
 uvicorn = "^0.30.1"
+pydantic-settings = "^2.3.4"
 
 
 [tool.ruff.format]
