--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 fastapi = "^0.111.1"
 uvicorn = "^0.30.1"
 pydantic-settings = "^2.3.4"
+pytest = "^8.3.1"
 
 
 [tool.ruff.format]
