--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = "^0.111.1"
 uvicorn = "^0.30.1"
 pydantic-settings = "^2.3.4"
 pytest = "^8.3.1"
+sqlalchemy = "^2.0.31"
 
 
 [tool.ruff.format]
