--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ BACKEND__DB__PORT=5432
 BACKEND__DB__USER=postgres
 BACKEND__DB__PASSWORD=postgres
 BACKEND__DB__DATABASE=pet-plat
+BACKEND__DB__TEST_DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/test_pet-plat
 
 #BACKEND__S3__HOST=
 #BACKEND__S3__PORT=
