--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,19 @@ uvicorn = "^0.30.1"
 pydantic-settings = "^2.3.4"
 pytest = "^8.3.1"
 sqlalchemy = "^2.0.31"
+pytest-asyncio = "^0.23.8"
 
+
+[tool.pytest.ini_options]
+pythonpath = "src"
+addopts = [
+    "--import-mode=importlib",
+    "-v",
+]
+testpaths = [
+    "tests",
+]
+asyncio_mode = "auto"
 
 [tool.ruff.format]
 quote-style = "double"
