--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,21 +1,15 @@
 name: CI
 
-on:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+on: [push]
 
 jobs:
   test:
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@4
+      - uses: actions/checkout@3
 
       - name: setup Python 3.11
-        uses: actions/setup-python@5
+        uses: actions/setup-python@4
         with:
           python-version: "3.11"
 
