--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,6 +29,9 @@ jobs:
       run: |
         curl -sSL https://install.python-poetry.org | python3 -
         echo "${HOME}/.local/bin" >> $GITHUB_PATH
+
+    - name: Create .env file
+      run: cat .env.example > .env
         
     - name: Install the project dependencies
       run: poetry install
